--- a/app/src/modules/views/index.html
+++ b/app/src/modules/views/index.html
@@ -38,6 +38,36 @@
 
 		<main class="main">
 			<div class="main__container container">
+				<!--
+				<section class="sections sections--userforms">
+					<legend class="sections__header sections__header--userforms">Registration</legend>
+					<form action="/home" method="post" class="sections__form" enctype="text/plain">
+						<fieldset class="sections__field sections__field--userforms">
+							<label for="username" class="sections__title">Name</label>
+							<input id="username" name="user_name" type="text" class="sections__text sections__text--userforms main__inputs" placeholder="Think of your own name!" maxlength="9" required>
+						</fieldset>
+						<fieldset class="sections__field">
+							<label for="password" class="sections__title">Password</label>
+							<input id="password" name="user_password" type="password" class="sections__text sections__text--userforms main__inputs" placeholder="...and a strong password!" maxlength="12" required>
+						</fieldset>
+						<button type="submit" class="sections__submit">Submit</button>
+					</form>
+				</section>
+				<section class="sections sections--userforms">
+					<legend class="sections__header sections__header--userforms">Login</legend>
+					<form action="/home" method="post" class="sections__form" enctype="text/plain">
+						<fieldset class="sections__field sections__field--userforms">
+							<label for="username" class="sections__title">Name</label>
+							<input id="username" name="user_name" type="text" class="sections__text sections__text--userforms main__inputs" placeholder="Your username is..." maxlength="9" required>
+						</fieldset>
+						<fieldset class="sections__field">
+							<label for="password" class="sections__title">Password</label>
+							<input id="password" name="user_password" type="password" class="sections__text sections__text--userforms main__inputs" placeholder="Your password is..." maxlength="12" required>
+						</fieldset>
+						<button type="submit" class="sections__submit">Submit</button>
+					</form>
+				</section>
+				-->
 				<section class="sections">
 					<legend class="sections__header">Add new task</legend>
 					<form action="/home" method="post" class="sections__form" enctype="text/plain">
@@ -55,7 +85,6 @@
 				<section class="sections">
 					<legend class="sections__header">Tasks list</legend>
 					<div class="sections__tasks-list">
-						<!--TASKS-->
 						<div class="sections__task">
 							<form action="/home" method="post" class="sections__form sections__form--task" enctype="text/plain">
 								<fieldset class="sections__field">
@@ -70,7 +99,6 @@
 								<button type="submit" class="sections__submit sections__submit--delete">Delete</button>
 							</form>
 						</div>
-						<!--END-->
 					</div>
 				</section>
 			</div>
