--- a/app/static/css/app.css
+++ b/app/static/css/app.css
@@ -165,6 +165,9 @@ body {
   align-items: center;
   border-radius: calc(0.16vw + 0.16vh);
 }
+.sections--userforms {
+  margin-left: 10vw;
+}
 .sections__header {
   width: 100%;
   height: fit-content;
@@ -178,6 +181,9 @@ body {
   border-radius: calc(0.16vw + 0.16vh) calc(0.16vw + 0.16vh) 0 0;
   color: rgb(255, 255, 255);
 }
+.sections__header--userforms {
+  padding-bottom: calc(0.3vw + 0.3vh);
+}
 .sections__tasks-list {
   display: inline-flex;
   flex-direction: column;
@@ -190,6 +196,8 @@ body {
   background: linear-gradient(to bottom right, rgb(255, 255, 220), rgb(255, 170, 200));
   border-radius: 0 0 calc(0.16vw + 0.16vh) calc(0.16vw + 0.16vh);
   overflow-y: auto;
+  scrollbar-width: thin;
+  scrollbar-color: rgb(55, 75, 255);
 }
 .sections__form {
   display: inline-flex;
@@ -217,6 +225,9 @@ body {
   width: 100%;
   margin-bottom: calc(0.5vw + 0.5vh);
 }
+.sections__field--userforms {
+  justify-content: space-between;
+}
 .sections__title {
   font-family: "InterRegular", sans-serif;
   font-style: normal;
@@ -229,6 +240,10 @@ body {
   width: 16vw;
   aspect-ratio: 7;
   margin-right: 9vw;
+}
+.sections__text--userforms {
+  width: 21vw;
+  margin-right: 0;
 }
 .sections__text--task {
   width: 25vw;
