--- a/app/src/modules/views/index.html
+++ b/app/src/modules/views/index.html
@@ -28,79 +28,19 @@
 						</li>
 					</ul>
 				</nav>
-				<div class="header__burger-button" hidden>
+				<!--
+				<div class="header__burger-button">
 					<span class="header__burger-button-line"></span>
 					<span class="header__burger-button-line"></span>
 					<span class="header__burger-button-line"></span>
 				</div>
+				-->
 			</div>
 		</header>
 
 		<main class="main">
-			<div class="main__container container">
-				<!--
-				<section class="sections sections--userforms">
-					<legend class="sections__header sections__header--userforms">Registration</legend>
-					<form action="/home" method="post" class="sections__form" enctype="text/plain">
-						<fieldset class="sections__field sections__field--userforms">
-							<label for="username" class="sections__title">Name</label>
-							<input id="username" name="user_name" type="text" class="sections__text sections__text--userforms main__inputs" placeholder="Think of your own name!" maxlength="9" required>
-						</fieldset>
-						<fieldset class="sections__field">
-							<label for="password" class="sections__title">Password</label>
-							<input id="password" name="user_password" type="password" class="sections__text sections__text--userforms main__inputs" placeholder="...and a strong password!" maxlength="12" required>
-						</fieldset>
-						<button type="submit" class="sections__submit">Submit</button>
-					</form>
-				</section>
-				<section class="sections sections--userforms">
-					<legend class="sections__header sections__header--userforms">Login</legend>
-					<form action="/home" method="post" class="sections__form" enctype="text/plain">
-						<fieldset class="sections__field sections__field--userforms">
-							<label for="username" class="sections__title">Name</label>
-							<input id="username" name="user_name" type="text" class="sections__text sections__text--userforms main__inputs" placeholder="Your username is..." maxlength="9" required>
-						</fieldset>
-						<fieldset class="sections__field">
-							<label for="password" class="sections__title">Password</label>
-							<input id="password" name="user_password" type="password" class="sections__text sections__text--userforms main__inputs" placeholder="Your password is..." maxlength="12" required>
-						</fieldset>
-						<button type="submit" class="sections__submit">Submit</button>
-					</form>
-				</section>
-				-->
-				<section class="sections">
-					<legend class="sections__header">Add new task</legend>
-					<form action="/home" method="post" class="sections__form" enctype="text/plain">
-						<fieldset class="sections__field">
-							<label for="title" class="sections__title">Title</label>
-							<input id="title" name="title" type="text" class="sections__text main__inputs" placeholder="Your task`s title is..." maxlength="32" required>
-						</fieldset>
-						<fieldset class="sections__field">
-							<label for="task" class="sections__title">Task</label>
-							<textarea id="task" name="task" class="sections__text sections__text--task main__inputs" placeholder="Write what you want!" maxlength="128" required></textarea>
-						</fieldset>
-						<button type="submit" class="sections__submit">Submit</button>
-					</form>
-				</section>
-				<section class="sections">
-					<legend class="sections__header">Tasks list</legend>
-					<div class="sections__tasks-list">
-						<div class="sections__task">
-							<form action="/home" method="post" class="sections__form sections__form--task" enctype="text/plain">
-								<fieldset class="sections__field">
-									<label class="sections__title">Title</label>
-									<input type="text" class="sections__text main__inputs" value="" disabled>
-								</fieldset>
-								<fieldset class="sections__field">
-									<label class="sections__title">Task</label>
-									<textarea class="sections__text sections__text--task main__inputs" disabled></textarea>
-								</fieldset>
-								<input name="task_id" type="number" value="#" disabled hidden>
-								<button type="submit" class="sections__submit sections__submit--delete">Delete</button>
-							</form>
-						</div>
-					</div>
-				</section>
+			<div id="root" class="main__container container">
+
 			</div>
 		</main>
 
@@ -113,6 +53,8 @@
 				<p title="Creator" class="footer__text">Created by Timur &copy;</p>
 			</div>
 		</footer>
+
+		<script src="/app/static/scripts/js/app.js"></script>
 
 	</body>
 </html>
