--- a/app/static/scss/_resources/utils/_globals.scss
+++ b/app/static/scss/_resources/utils/_globals.scss
@@ -1,11 +1,13 @@
 @use "../tokens/colors" as color;
 
 html {
+	display: block;
 	width: 100vw;
 	height: 100vh;
 }
 
 body {
+	display: block;
 	width: 100%;
 	height: 100%;
 	position: relative;
