--- a/app/static/css/app.css
+++ b/app/static/css/app.css
@@ -31,11 +31,13 @@
 }
 
 html {
+  display: block;
   width: 100vw;
   height: 100vh;
 }
 
 body {
+  display: block;
   width: 100%;
   height: 100%;
   position: relative;
@@ -197,7 +199,6 @@ body {
   border-radius: 0 0 calc(0.16vw + 0.16vh) calc(0.16vw + 0.16vh);
   overflow-y: auto;
   scrollbar-width: thin;
-  scrollbar-color: rgb(55, 75, 255);
 }
 .sections__form {
   display: inline-flex;
