--- a/app/src/modules/views/MODULES.html
+++ b/app/src/modules/views/MODULES.html
@@ -1,9 +1,9 @@
 <section class="sections sections--userforms">
 	<legend class="sections__header sections__header--userforms">Registration</legend>
-	<form action="/registration" method="post" class="sections__form" enctype="text/plain">
+	<form id="registrationForm" class="sections__form">
 		<fieldset class="sections__field sections__field--userforms">
 			<label for="username" class="sections__title">Name</label>
-			<input id="username" name="user_name" type="text" class="sections__text sections__text--userforms main__inputs" placeholder="Think of your own name!" maxlength="16" required>
+			<input id="username" name="user_name" type="text" class="sections__text sections__text--userforms main__inputs" placeholder="Think of your own name!" maxlength="12" required>
 		</fieldset>
 		<fieldset class="sections__field">
 			<label for="password" class="sections__title">Password</label>
@@ -15,7 +15,7 @@
 
 <section class="sections sections--userforms">
 	<legend class="sections__header sections__header--userforms">Login</legend>
-	<form action="/login" method="post" class="sections__form" enctype="text/plain">
+	<form id="loginForm" class="sections__form">
 		<fieldset class="sections__field sections__field--userforms">
 			<label for="username" class="sections__title">Name</label>
 			<input id="username" name="user_name" type="text" class="sections__text sections__text--userforms main__inputs" placeholder="Your username is..." maxlength="16" required>
@@ -30,7 +30,7 @@
 
 <section class="sections">
 	<legend class="sections__header">Add new task</legend>
-	<form action="/create" method="post" class="sections__form" enctype="text/plain">
+	<form id="createForm" class="sections__form">
 		<fieldset class="sections__field">
 			<label for="title" class="sections__title">Title</label>
 			<input id="title" name="task_title" type="text" class="sections__text main__inputs" placeholder="Your task`s title is..." maxlength="32" required>
@@ -39,7 +39,7 @@
 			<label for="task" class="sections__title">Task</label>
 			<textarea id="task" name="task_text" class="sections__text sections__text--task main__inputs" placeholder="Write what you want!" maxlength="128" required></textarea>
 		</fieldset>
-		<input name="user_id" type="number" value="#" disabled hidden>
+		<input name="user_id" type="number" value="" hidden>
 		<button type="submit" class="sections__submit">Submit</button>
 	</form>
 </section>
@@ -49,16 +49,16 @@
 	<div class="sections__tasks-list">
 		<!--
 		<div class="sections__task">
-			<form action="/delete" method="post" class="sections__form sections__form--task" enctype="text/plain">
+			<form class="sections__form sections__form--task">
 				<fieldset class="sections__field">
 					<label class="sections__title">Title</label>
-					<input type="text" class="sections__text main__inputs" value="" disabled>
+					<input name="task_title" type="text" class="sections__text main__inputs" value="${task.task_title}" disabled>
 				</fieldset>
 				<fieldset class="sections__field">
 					<label class="sections__title">Task</label>
-					<textarea class="sections__text sections__text--task main__inputs" disabled></textarea>
+					<textarea name="task_text" class="sections__text sections__text--task main__inputs" disabled>${task.task_text}</textarea>
 				</fieldset>
-				<input name="task_id" type="number" value="#" disabled hidden>
+				<input name="task_id" type="number" value="${task.id}" hidden>
 				<button type="submit" class="sections__submit sections__submit--delete">Delete</button>
 			</form>
 		</div>
