--- a/app/src/modules/views/index.html
+++ b/app/src/modules/views/index.html
@@ -16,7 +16,7 @@
 		<header class="header">
 			<div class="header__container container">
 				<div class="header__logo-wrapper">
-					<a href="/" title="Home" class="header__logo logo" target="_self">Tasker</a>
+					<p class="header__logo logo" target="_self">Tasker</p>
 				</div>
 				<div id="header-root">
 
@@ -45,7 +45,7 @@
 			</div>
 		</footer>
 
-		<script src="/app/static/scripts/js/app.js"></script>
+		<script type="module" src="/app/static/scripts/js/app.js"></script>
 
 	</body>
 </html>
