--- a/app/src/modules/views/index.html
+++ b/app/src/modules/views/index.html
@@ -45,7 +45,7 @@
 			</div>
 		</footer>
 
-		<script type="module" src="/app/static/scripts/js/app.js"></script>
+		<script src="/app/static/scripts/js/app.js"></script>
 
 	</body>
 </html>
