--- a/app/src/modules/views/index.html
+++ b/app/src/modules/views/index.html
@@ -4,9 +4,11 @@
 		<meta charset="UTF-8">
 		<meta name="description" content="Tasker - это удобный онлайн-задачник для организации ваших задач.">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<!--
 		<link rel="preload" href="/app/static/fonts/Inter18pt-Italic.woff2" as="font" type="font/woff2" crossorigin>
 		<link rel="preload" href="/app/static/fonts/Inter18pt-Medium.woff2" as="font" type="font/woff2" crossorigin>
 		<link rel="preload" href="/app/static/fonts/Inter18pt-Regular.woff2" as="font" type="font/woff2" crossorigin>
+		-->
 		<link rel="icon" type="image/x-icon" href="/app/static/imgs/favicon.ico">
 		<link rel="stylesheet" href="/app/static/css/app.css">
 		<title>Tasker | Задачник</title>
@@ -45,7 +47,7 @@
 			</div>
 		</footer>
 
-		<script src="/app/static/scripts/js/app.js"></script>
+		<script type="module" src="/app/static/scripts/js/app.js" defer></script>
 
 	</body>
 </html>
