--- a/app/static/scss/app.scss
+++ b/app/static/scss/app.scss
@@ -6,6 +6,8 @@
 
 @use "./_resources/utils/container";
 
+@use "./_interfaces/messages";
+
 @use "./_interfaces/header";
 
 @use "./_interfaces/main";
