--- a/app/static/css/app.css
+++ b/app/static/css/app.css
@@ -74,8 +74,11 @@ body {
   border-radius: calc(0.16vw + 0.16vh);
   background-color: rgb(255, 255, 255);
 }
-.message__text--yes {
+.message__text--success {
   color: rgb(0, 235, 0);
+}
+.message__text--error {
+  color: rgb(255, 10, 10);
 }
 
 .header {
